# ChangeLog for sci-libs/umfpack
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.20 2010/07/09 10:18:46 ssuominen Exp $

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> umfpack-5.2.0.ebuild:
  ppc64 stable wrt #318649

  16 May 2010; Sébastien Fabbro <bicatali@gentoo.org>
  files/umfpack-5.5.0-autotools.patch:
  Changed the NCHOLMOD define in the autotools patch to fix bug #319841

*umfpack-5.5.0 (14 May 2010)

  14 May 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +umfpack-5.5.0.ebuild, +files/umfpack-5.5.0-autotools.patch, metadata.xml:
  Version bump. Now can use METIS partitioning, via CHOLMOD

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org> umfpack-5.4.0.ebuild:
  Transfer Prefix keywords

*umfpack-5.4.0 (21 Nov 2009)

  21 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +umfpack-5.4.0.ebuild:
  Version bump

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> umfpack-5.2.0.ebuild:
  Stable for HPPA (bug #245707).

  27 Sep 2009; nixnut <nixnut@gentoo.org> umfpack-5.2.0.ebuild:
  ppc stable #245707

  20 Apr 2009; Markus Meier <maekke@gentoo.org> umfpack-5.2.0:
  x86 stable, bug #245707

  27 Mar 2009; Ferris McCormick <fmccor@gentoo.org> umfpack-5.2.0.ebuild:
  Sparc stable, preparation for bug #245707.

  23 Mar 2009; Jeremy Olexa <darkside@gentoo.org> umfpack-5.2.0.ebuild:
  amd64 stable, bug 245707

  23 Mar 2009; Jeremy Olexa <darkside@gentoo.org> umfpack-5.2.0.ebuild:
  amd64 stable, bug 245707

  08 Feb 2009; Tobias Klausmann <klausman@gentoo.org> umfpack-5.2.0.ebuild:
  Stable on alpha, bug #245707

  08 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/umfpack-5.0.3-autotools.patch,
  -files/umfpack-5.1.0-autotools.patch, files/umfpack-5.2.0-autotools.patch,
  -umfpack-5.0.3.ebuild, -umfpack-5.1.0.ebuild:
  Removed older versions, make tests not failures not die the src_test since