@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/umfpack-5.5.0.ebuild,v 1.1 2010/05/14 21:46:31 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/umfpack-5.5.0.ebuild,v 1.2 2010/12/22 18:21:44 bicatali Exp $
 
 EAPI=2
 inherit autotools eutils
@@ -14,7 +14,7 @@ SRC_URI="http://www.cise.ufl.edu/research/sparse/${PN}/${MY_PN}-${PV}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~x86-macos"
-IUSE="doc metis"
+IUSE="doc metis static-libs"
 RDEPEND="virtual/blas
 	sci-libs/amd
 	metis? ( sci-libs/cholmod[metis] )"
@@ -33,6 +33,7 @@ src_prepare() {
 src_configure() {
 	econf \
 		--with-blas="$(pkg-config --libs blas)" \
+		$(use_enable static-libs static) \
 		$(use_with metis cholmod)
 }
 
