@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.20 2010/07/09 10:18:46 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.21 2010/12/22 18:21:44 bicatali Exp $
+
+  22 Dec 2010; Sébastien Fabbro <bicatali@gentoo.org> umfpack-5.5.0.ebuild:
+  Added static-libs flag
 
   09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> umfpack-5.2.0.ebuild:
   ppc64 stable wrt #318649
